# Hiro-Smart-Doc

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  NOTICE  README.md  README_zh.md  gunicorn.conf.py  pyproject.toml  requirements.txt
hiro_smart_doc/: base_app.py  gradio_ui.py  service.py
hiro_smart_doc/common/: aiohttp_session.py  document_converter.py  file_utils.py  local_storage.py  log.py  stage_timing.py  utils.py
hiro_smart_doc/layout/: __init__.py  infer_utils.py  model_runner.py
hiro_smart_doc/layout/backends/: base.py  onnx_backend.py
hiro_smart_doc/layout/model_runner_25/: model_runner_25.py
hiro_smart_doc/layout/model_runner_5/: model_runner_5.py
hiro_smart_doc/layout/model_runner_9/: model_runner_9.py
hiro_smart_doc/layout/model_runner_chem/: model_runner_chem.py
hiro_smart_doc/model_runners/: __init__.py  layout.py  moss_client.py  moss_ocr_runner.py
layout_model/: .gitkeep
scripts/: download_models.py
