[project]
name = "hiro-smart-doc"
version = "1.0.0"
description = "Hiro-Smart-Doc: document layout analysis + MOSS OCR API service for documents, PDFs and images."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "PatSnap" }]
keywords = ["ocr", "document-ai", "layout-analysis", "pdf", "fastapi"]

dependencies = [
    "numpy>=1.26.4,<2",
    "opencv-python-headless>=4.9.0.80",
    "pypdfium2>=4.30.0",
    "pillow>=10.3.0",
    "aiohttp>=3.9.5",
    "requests>=2.32.5",
    "concurrent-log-handler>=0.9.25",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "gunicorn>=21.2.0",
    "email-validator>=2.1.1",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "onnxruntime>=1.20.0",
    # gradio 6 pins gradio-client==2.5.0 and pulls hf-gradio/safehttpx transitively.
    "gradio>=6.17.3,<7",
    "huggingface_hub>=0.33.5,<2.0",
]

[project.optional-dependencies]
# GPU inference. Replaces the CPU `onnxruntime` with `onnxruntime-gpu` and pulls
# the matching CUDA 12 + cuDNN 9 runtime libraries as pip wheels, so no system
# CUDA/cuDNN install is needed. The app calls onnxruntime.preload_dlls() to load
# them from these wheels. Requires an NVIDIA driver supporting CUDA 12.x.
gpu = ["onnxruntime-gpu[cuda,cudnn]>=1.21"]
# Office document -> PDF conversion via LibreOffice.
docconvert = ["unoserver>=3.6"]
# Tooling for fetching model weights.
download = ["huggingface_hub>=0.33.5,<2.0"]

[project.urls]
Homepage = "https://github.com/patsnap/Hiro-Smart-Doc"
Repository = "https://github.com/patsnap/Hiro-Smart-Doc"

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "huggingface_hub>=0.33.5,<2.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["hiro_smart_doc"]

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
